# interactive-noisy-simulation

./: .gitattributes  .gitignore  README.md  noise_creator.py  noise_data_manager.py  pyproject.toml  simulator_manager.py
data/: config.json  csv_columns.json  messages.json  noise_data_manager_descriptions.json
interactive_noisy_simulation/: __init__.py  __main__.py  exceptions.py  noise_creator.py  noise_data_manager.py  simulator_manager.py
interactive_noisy_simulation/app/: content_management.py  exposed.py
interactive_noisy_simulation/core/data_structures/: noise_data_instance.py  noise_model_instance.py
interactive_noisy_simulation/core/instance_managers/: noise_creator.py  noise_data_manager.py  simulator_manager.py
interactive_noisy_simulation/core/instance_managers/helpers/: csv_modification.py
interactive_noisy_simulation/core/messages/: __init__.py  _message_manager.py
interactive_noisy_simulation/core/messages/helpers/: text_styling.py
interactive_noisy_simulation/core/messages/static/: styles.css
interactive_noisy_simulation/core/utils/: checkers.py  key_blocker.py  validators.py
interactive_noisy_simulation/data/: __init__.py  _data.py  config.json  csv_columns.json  messages.json
interactive_noisy_simulation/data_structures/: noise_data_instance.py  simulator_instance.py
interactive_noisy_simulation/messages/: _message_manager.py  content.html  scripts.js  styles.css
interactive_noisy_simulation/messages/scripts/: scripts.js
interactive_noisy_simulation/terminal/: _console.py  app.py  updater.py  version_control.py
interactive_noisy_simulation/utils/: __init__.py  key_availability.py  key_blocker.py  validators.py
interactive_noisy_simulation/web/: index.html  noise_data_instance.html  style.css
interactive_noisy_simulation/web/scripts/: element_management.js
interactive_noisy_simulation/web/scripts/instance_management/noise_data_manager/: all_instances.js  single_instance.js
