[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive_noisy_simulation"
version = "1.2.0"
description = "A more intuitive and interactive way of creating noise models and simulators, as well as executing circuits with the created simulators."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas >= 2.3.1",
    "qiskit >= 2.1.1",
    "qiskit-aer >= 0.17.1"
]
authors = [{name = "Edgars Bautra"}]

[project.urls]
Repository = "https://github.com/BautraE/interactive-noisy-simulation"

[tool.setuptools.package-data]
"interactive_noisy_simulation.data" = ["*.json"]
"interactive_noisy_simulation.messages" = [
    "*.css", "*.html", "*.js"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["interactive_noisy_simulation*"]
exclude = ["media*"]
